<resources>
    <string name="app_name">HomeBank</string>
    <string name="title_home">Home</string>
    <string name="title_payments">Payments</string>
    <string name="title_transactions">Transactions</string>
    <string name="phone_number">Welcome!</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="_07xxxxxxxxx">+40 07x xxx xxx</string>
    <string name="_08xxxx">000000</string>
    <string name="please_enter_the_verification_code">Please enter verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="select_card_number">Select source card number</string>
    <string name="select_account_name">Select source account name</string>
</resources>