<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/back01"
    tools:context=".MainActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="159dp"
            android:layout_height="186dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="115dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="54dp"
            android:src="@drawable/twotone_phonelink_lock_24" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="#000">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_phone_number"
            android:textAlignment="center"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/phonEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/_07xxxxxxxxx"
            android:background="#fff"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="#c5c5c5"
            android:textAlignment="center"
            android:textColor="#000"
            android:autofillHints="0771735494" />


        <Button
            android:id="@+id/phoneContinueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/babyblue"
            android:backgroundTintMode="screen"

            android:shadowColor="@color/black"
            android:text="Continue" />

    </LinearLayout>

    <!--2) For OTP/Verification Code input-->
    <LinearLayout
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verification_code"
            android:textAlignment="center"
            android:textColor="#000">
        </TextView>

        <TextView
            android:id="@+id/codeSentDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_verification_code"
            android:textAlignment="center"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/otpEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/_08xxxx"
            android:background="#fff"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="#c5c5c5"
            android:textAlignment="center"
            android:textColor="#000" />

        <TextView
            android:id="@+id/resendOtpTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#777777"
            android:text="@string/resend_otp" />

        <Button
            android:id="@+id/otpContinueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/babyblue"
            android:backgroundTintMode="screen"
            android:text="Submit"/>

    </LinearLayout>

</LinearLayout>